@@ -1,9 +1,11 @@
 Changes between 1.3 and 1.3.1
 =============================
-- Load and save the frames order ("z index")
+- Fixed "add bookmark" for the case where there's no selection
+- Keep bookmark valid after deleting its paragraph
 
 Last changes for KWord-1.3
 ==========================
+- Load and save the frames order ("z index")
 - Fixed swapped resize mouse cursors with Qt-3.1.2
 - Fixed table column resizing (avoid overlapping columns)
 
